--- a/src/css/body.css
+++ b/src/css/body.css
@@ -11,7 +11,6 @@ img {
    text-align: center;
    margin-bottom: 15px;
    cursor: pointer;
-   line-height: 335px;
 }
 
 .cnt-images .cnt-main-image img {
@@ -217,6 +216,10 @@ img {
 
    .cnt-choose .cnt-items-icons li {
       overflow: auto;
+   }
+
+   .cnt-images .cnt-main-image {
+      height: 181px;
    }
 }
 
